docs/api/qiskit/0.24/qiskit.aqua.components.optimizers.AQGD.mdx
---
title: AQGD
description: API reference for qiskit.aqua.components.optimizers.AQGD
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.optimizers.AQGD
---

<span id="qiskit-aqua-components-optimizers-aqgd" />

# qiskit.aqua.components.optimizers.AQGD

<Class id="qiskit.aqua.components.optimizers.AQGD" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/optimizers/aqgd.py" signature="AQGD(maxiter=1000, eta=1.0, tol=1e-06, disp=False, momentum=0.25, param_tol=1e-06, averaging=10)">
  Analytic Quantum Gradient Descent (AQGD) with Epochs optimizer. Performs gradient descent optimization with a momentum term, analytic gradients, and customized step length schedule for parametrized quantum gates, i.e. Pauli Rotations. See, for example:

  *   K. Mitarai, M. Negoro, M. Kitagawa, and K. Fujii. (2018). Quantum circuit learning. Phys. Rev. A 98, 032309. [https://arxiv.org/abs/1803.00745](https://arxiv.org/abs/1803.00745)
  *   Maria Schuld, Ville Bergholm, Christian Gogolin, Josh Izaac, Nathan Killoran. (2019). Evaluating analytic gradients on quantum hardware. Phys. Rev. A 99, 032331. [https://arxiv.org/abs/1811.11184](https://arxiv.org/abs/1811.11184)

  for further details on analytic gradients of parametrized quantum gates.

  Gradients are computed “analytically” using the quantum circuit when evaluating the objective function.

  Performs Analytical Quantum Gradient Descent (AQGD) with Epochs.

  **Parameters**

  *   **maxiter** (`Union`\[`int`, `List`\[`int`]]) – Maximum number of iterations (full gradient steps)
  *   **eta** (`Union`\[`float`, `List`\[`float`]]) – The coefficient of the gradient update. Increasing this value results in larger step sizes: param = previous\_param - eta \* deriv
  *   **tol** (`float`) – Tolerance for change in windowed average of objective values. Convergence occurs when either objective tolerance is met OR parameter tolerance is met.
  *   **disp** (`bool`) – Set to True to display convergence messages.
  *   **momentum** (`Union`\[`float`, `List`\[`float`]]) – Bias towards the previous gradient momentum in current update. Must be within the bounds: \[0,1)
  *   **param\_tol** (`float`) – Tolerance for change in norm of parameters.
  *   **averaging** (`int`) – Length of window over which to average objective values for objective convergence criterion

  **Raises**

  [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If the length of `maxiter`, momentum\`, and `eta` is not the same.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.optimizers.AQGD.__init__" name="__init__" signature="__init__(maxiter=1000, eta=1.0, tol=1e-06, disp=False, momentum=0.25, param_tol=1e-06, averaging=10)">
    Performs Analytical Quantum Gradient Descent (AQGD) with Epochs.

    **Parameters**

    *   **maxiter** (`Union`\[`int`, `List`\[`int`]]) – Maximum number of iterations (full gradient steps)
    *   **eta** (`Union`\[`float`, `List`\[`float`]]) – The coefficient of the gradient update. Increasing this value results in larger step sizes: param = previous\_param - eta \* deriv
    *   **tol** (`float`) – Tolerance for change in windowed average of objective values. Convergence occurs when either objective tolerance is met OR parameter tolerance is met.
    *   **disp** (`bool`) – Set to True to display convergence messages.
    *   **momentum** (`Union`\[`float`, `List`\[`float`]]) – Bias towards the previous gradient momentum in current update. Must be within the bounds: \[0,1)
    *   **param\_tol** (`float`) – Tolerance for change in norm of parameters.
    *   **averaging** (`int`) – Length of window over which to average objective values for objective convergence criterion

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If the length of `maxiter`, momentum\`, and `eta` is not the same.
  </Function>

  ## Methods

  |                                                                                                                                                                          |                                                                                                           |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.components.optimizers.AQGD.__init__ "qiskit.aqua.components.optimizers.AQGD.__init__")(\[maxiter, eta, tol, disp, …])                          | Performs Analytical Quantum Gradient Descent (AQGD) with Epochs.                                          |
  | [`get_support_level`](#qiskit.aqua.components.optimizers.AQGD.get_support_level "qiskit.aqua.components.optimizers.AQGD.get_support_level")()                            | Support level dictionary                                                                                  |
  | [`gradient_num_diff`](#qiskit.aqua.components.optimizers.AQGD.gradient_num_diff "qiskit.aqua.components.optimizers.AQGD.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
  | [`optimize`](#qiskit.aqua.components.optimizers.AQGD.optimize "qiskit.aqua.components.optimizers.AQGD.optimize")(num\_vars, objective\_function\[, …])                   | Perform optimization.                                                                                     |
  | [`print_options`](#qiskit.aqua.components.optimizers.AQGD.print_options "qiskit.aqua.components.optimizers.AQGD.print_options")()                                        | Print algorithm-specific options.                                                                         |
  | [`set_max_evals_grouped`](#qiskit.aqua.components.optimizers.AQGD.set_max_evals_grouped "qiskit.aqua.components.optimizers.AQGD.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
  | [`set_options`](#qiskit.aqua.components.optimizers.AQGD.set_options "qiskit.aqua.components.optimizers.AQGD.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
  | [`wrap_function`](#qiskit.aqua.components.optimizers.AQGD.wrap_function "qiskit.aqua.components.optimizers.AQGD.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

  ## Attributes

  |                                                                                                                                                                           |                                     |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
  | [`bounds_support_level`](#qiskit.aqua.components.optimizers.AQGD.bounds_support_level "qiskit.aqua.components.optimizers.AQGD.bounds_support_level")                      | Returns bounds support level        |
  | [`gradient_support_level`](#qiskit.aqua.components.optimizers.AQGD.gradient_support_level "qiskit.aqua.components.optimizers.AQGD.gradient_support_level")                | Returns gradient support level      |
  | [`initial_point_support_level`](#qiskit.aqua.components.optimizers.AQGD.initial_point_support_level "qiskit.aqua.components.optimizers.AQGD.initial_point_support_level") | Returns initial point support level |
  | [`is_bounds_ignored`](#qiskit.aqua.components.optimizers.AQGD.is_bounds_ignored "qiskit.aqua.components.optimizers.AQGD.is_bounds_ignored")                               | Returns is bounds ignored           |
  | [`is_bounds_required`](#qiskit.aqua.components.optimizers.AQGD.is_bounds_required "qiskit.aqua.components.optimizers.AQGD.is_bounds_required")                            | Returns is bounds required          |
  | [`is_bounds_supported`](#qiskit.aqua.components.optimizers.AQGD.is_bounds_supported "qiskit.aqua.components.optimizers.AQGD.is_bounds_supported")                         | Returns is bounds supported         |
  | [`is_gradient_ignored`](#qiskit.aqua.components.optimizers.AQGD.is_gradient_ignored "qiskit.aqua.components.optimizers.AQGD.is_gradient_ignored")                         | Returns is gradient ignored         |
  | [`is_gradient_required`](#qiskit.aqua.components.optimizers.AQGD.is_gradient_required "qiskit.aqua.components.optimizers.AQGD.is_gradient_required")                      | Returns is gradient required        |
  | [`is_gradient_supported`](#qiskit.aqua.components.optimizers.AQGD.is_gradient_supported "qiskit.aqua.components.optimizers.AQGD.is_gradient_supported")                   | Returns is gradient supported       |
  | [`is_initial_point_ignored`](#qiskit.aqua.components.optimizers.AQGD.is_initial_point_ignored "qiskit.aqua.components.optimizers.AQGD.is_initial_point_ignored")          | Returns is initial point ignored    |
  | [`is_initial_point_required`](#qiskit.aqua.components.optimizers.AQGD.is_initial_point_required "qiskit.aqua.components.optimizers.AQGD.is_initial_point_required")       | Returns is initial point required   |
  | [`is_initial_point_supported`](#qiskit.aqua.components.optimizers.AQGD.is_initial_point_supported "qiskit.aqua.components.optimizers.AQGD.is_initial_point_supported")    | Returns is initial point supported  |
  | [`setting`](#qiskit.aqua.components.optimizers.AQGD.setting "qiskit.aqua.components.optimizers.AQGD.setting")                                                             | Return setting                      |

  ### bounds\_support\_level

  <Function id="qiskit.aqua.components.optimizers.AQGD.bounds_support_level" name="bounds_support_level" signature="property bounds_support_level">
    Returns bounds support level
  </Function>

  ### get\_support\_level

  <Function id="qiskit.aqua.components.optimizers.AQGD.get_support_level" name="get_support_level" signature="get_support_level()">
    Support level dictionary

    **Returns**

    **gradient, bounds and initial point**

    support information that is ignored/required.

    **Return type**

    Dict\[str, int]
  </Function>

  ### gradient\_num\_diff

  <Function id="qiskit.aqua.components.optimizers.AQGD.gradient_num_diff" name="gradient_num_diff" signature="static gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  ### gradient\_support\_level

  <Function id="qiskit.aqua.components.optimizers.AQGD.gradient_support_level" name="gradient_support_level" signature="property gradient_support_level">
    Returns gradient support level
  </Function>

  ### initial\_point\_support\_level

  <Function id="qiskit.aqua.components.optimizers.AQGD.initial_point_support_level" name="initial_point_support_level" signature="property initial_point_support_level">
    Returns initial point support level
  </Function>

  ### is\_bounds\_ignored

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_bounds_ignored" name="is_bounds_ignored" signature="property is_bounds_ignored">
    Returns is bounds ignored
  </Function>

  ### is\_bounds\_required

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_bounds_required" name="is_bounds_required" signature="property is_bounds_required">
    Returns is bounds required
  </Function>

  ### is\_bounds\_supported

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_bounds_supported" name="is_bounds_supported" signature="property is_bounds_supported">
    Returns is bounds supported
  </Function>

  ### is\_gradient\_ignored

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_gradient_ignored" name="is_gradient_ignored" signature="property is_gradient_ignored">
    Returns is gradient ignored
  </Function>

  ### is\_gradient\_required

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_gradient_required" name="is_gradient_required" signature="property is_gradient_required">
    Returns is gradient required
  </Function>

  ### is\_gradient\_supported

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_gradient_supported" name="is_gradient_supported" signature="property is_gradient_supported">
    Returns is gradient supported
  </Function>

  ### is\_initial\_point\_ignored

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_initial_point_ignored" name="is_initial_point_ignored" signature="property is_initial_point_ignored">
    Returns is initial point ignored
  </Function>

  ### is\_initial\_point\_required

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_initial_point_required" name="is_initial_point_required" signature="property is_initial_point_required">
    Returns is initial point required
  </Function>

  ### is\_initial\_point\_supported

  <Function id="qiskit.aqua.components.optimizers.AQGD.is_initial_point_supported" name="is_initial_point_supported" signature="property is_initial_point_supported">
    Returns is initial point supported
  </Function>

  ### optimize

  <Function id="qiskit.aqua.components.optimizers.AQGD.optimize" name="optimize" signature="optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Return type**

    `Tuple`\[`ndarray`, `float`, `int`]

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  ### print\_options

  <Function id="qiskit.aqua.components.optimizers.AQGD.print_options" name="print_options" signature="print_options()">
    Print algorithm-specific options.
  </Function>

  ### set\_max\_evals\_grouped

  <Function id="qiskit.aqua.components.optimizers.AQGD.set_max_evals_grouped" name="set_max_evals_grouped" signature="set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  ### set\_options

  <Function id="qiskit.aqua.components.optimizers.AQGD.set_options" name="set_options" signature="set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  ### setting

  <Function id="qiskit.aqua.components.optimizers.AQGD.setting" name="setting" signature="property setting">
    Return setting
  </Function>

  ### wrap\_function

  <Function id="qiskit.aqua.components.optimizers.AQGD.wrap_function" name="wrap_function" signature="static wrap_function(function, args)">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

